x-IMU3-API/C/Ximu3.h

typedef enum XIMU3_ChargingStatus
{
    XIMU3_ChargingStatusNotConnected,
    XIMU3_ChargingStatusCharging,
    XIMU3_ChargingStatusChargingComplete,
    XIMU3_ChargingStatusChargingOnHold,
} XIMU3_ChargingStatus;
typedef enum XIMU3_Result
{
    XIMU3_ResultOk,
    XIMU3_ResultAddrInUse,
    XIMU3_ResultAddrNotAvailable,
    XIMU3_ResultAlreadyExists,
    XIMU3_ResultArgumentListTooLong,
    XIMU3_ResultBrokenPipe,
    XIMU3_ResultConnectionAborted,
    XIMU3_ResultConnectionRefused,
    XIMU3_ResultConnectionReset,
    XIMU3_ResultDeadlock,
    XIMU3_ResultDirectoryNotEmpty,
    XIMU3_ResultExecutableFileBusy,
    XIMU3_ResultFileTooLarge,
    XIMU3_ResultHostUnreachable,
    XIMU3_ResultInterrupted,
    XIMU3_ResultInvalidData,
    XIMU3_ResultInvalidInput,
    XIMU3_ResultIsADirectory,
    XIMU3_ResultNetworkDown,
    XIMU3_ResultNetworkUnreachable,
    XIMU3_ResultNotADirectory,
    XIMU3_ResultNotConnected,
    XIMU3_ResultNotFound,
    XIMU3_ResultNotSeekable,
    XIMU3_ResultOther,
    XIMU3_ResultOutOfMemory,
    XIMU3_ResultPermissionDenied,
    XIMU3_ResultReadOnlyFilesystem,
    XIMU3_ResultResourceBusy,
    XIMU3_ResultStaleNetworkFileHandle,
    XIMU3_ResultStorageFull,
    XIMU3_ResultTimedOut,
    XIMU3_ResultTooManyLinks,
    XIMU3_ResultUnexpectedEof,
    XIMU3_ResultUnsupported,
    XIMU3_ResultWouldBlock,
    XIMU3_ResultWriteZero,
    XIMU3_ResultUnknownError,
} XIMU3_Result;
typedef enum XIMU3_ConnectionType
{
    XIMU3_ConnectionTypeUsb,
    XIMU3_ConnectionTypeSerial,
    XIMU3_ConnectionTypeTcp,
    XIMU3_ConnectionTypeUdp,
    XIMU3_ConnectionTypeBluetooth,
    XIMU3_ConnectionTypeFile,
    XIMU3_ConnectionTypeMux,
} XIMU3_ConnectionType;
typedef enum XIMU3_FileConverterStatus
{
    XIMU3_FileConverterStatusInProgress,
    XIMU3_FileConverterStatusComplete,
} XIMU3_FileConverterStatus;
typedef enum XIMU3_PortType
{
    XIMU3_PortTypeUsb,
    XIMU3_PortTypeSerial,
    XIMU3_PortTypeBluetooth,
} XIMU3_PortType;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_DataLogger XIMU3_DataLogger;
typedef struct XIMU3_FileConverter XIMU3_FileConverter;
typedef struct XIMU3_MuxConnectionConfig XIMU3_MuxConnectionConfig;
typedef struct XIMU3_NetworkAnnouncement XIMU3_NetworkAnnouncement;
typedef struct XIMU3_PortScanner XIMU3_PortScanner;
typedef struct XIMU3_CharArrays
{
    char (*array)[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t length;
    uint32_t capacity;
} XIMU3_CharArrays;
typedef struct XIMU3_UsbConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_UsbConnectionConfig;
typedef struct XIMU3_SerialConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t baud_rate;
    bool rts_cts_enabled;
} XIMU3_SerialConnectionConfig;
typedef struct XIMU3_TcpConnectionConfig
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t port;
} XIMU3_TcpConnectionConfig;
typedef struct XIMU3_UdpConnectionConfig
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t send_port;
    uint16_t receive_port;
} XIMU3_UdpConnectionConfig;
typedef struct XIMU3_BluetoothConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_BluetoothConnectionConfig;
typedef struct XIMU3_FileConnectionConfig
{
    char file_path[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_FileConnectionConfig;
typedef struct XIMU3_PingResponse
{
    char interface[XIMU3_CHAR_ARRAY_SIZE];
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_PingResponse;
typedef struct XIMU3_Statistics
{
    uint64_t data_total;
    uint32_t data_rate;
    uint64_t message_total;
    uint32_t message_rate;
    uint64_t error_total;
    uint32_t error_rate;
} XIMU3_Statistics;
typedef struct XIMU3_InertialMessage
{
    uint64_t timestamp;
    float gyroscope_x;
    float gyroscope_y;
    float gyroscope_z;
    float accelerometer_x;
    float accelerometer_y;
    float accelerometer_z;
} XIMU3_InertialMessage;
typedef struct XIMU3_MagnetometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_MagnetometerMessage;
typedef struct XIMU3_HighGAccelerometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_HighGAccelerometerMessage;
typedef struct XIMU3_QuaternionMessage
{
    uint64_t timestamp;
    float w;
    float x;
    float y;
    float z;
} XIMU3_QuaternionMessage;
typedef struct XIMU3_RotationMatrixMessage
{
    uint64_t timestamp;
    float xx;
    float xy;
    float xz;
    float yx;
    float yy;
    float yz;
    float zx;
    float zy;
    float zz;
} XIMU3_RotationMatrixMessage;
typedef struct XIMU3_EulerAnglesMessage
{
    uint64_t timestamp;
    float roll;
    float pitch;
    float yaw;
} XIMU3_EulerAnglesMessage;
typedef struct XIMU3_LinearAccelerationMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_LinearAccelerationMessage;
typedef struct XIMU3_EarthAccelerationMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_EarthAccelerationMessage;
typedef struct XIMU3_AhrsStatusMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_AhrsStatusMessage;
typedef struct XIMU3_SerialAccessoryMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_SerialAccessoryMessage;
typedef struct XIMU3_TemperatureMessage
{
    uint64_t timestamp;
    float temperature;
} XIMU3_TemperatureMessage;
typedef struct XIMU3_BatteryMessage
{
    uint64_t timestamp;
    float percentage;
    float voltage;
    float charging_status;
} XIMU3_BatteryMessage;
typedef struct XIMU3_RssiMessage
{
    uint64_t timestamp;
    float percentage;
    float power;
} XIMU3_RssiMessage;
typedef struct XIMU3_NotificationMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_NotificationMessage;
typedef struct XIMU3_ErrorMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_ErrorMessage;
typedef void (*XIMU3_CallbackErrorMessage)(struct XIMU3_ErrorMessage data, void *context);
typedef struct XIMU3_Device
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    enum XIMU3_ConnectionType connection_type;
    struct XIMU3_UsbConnectionConfig usb_connection_config;
    struct XIMU3_SerialConnectionConfig serial_connection_config;
    struct XIMU3_TcpConnectionConfig tcp_connection_config;
    struct XIMU3_UdpConnectionConfig udp_connection_config;
    struct XIMU3_BluetoothConnectionConfig bluetooth_connection_config;
    struct XIMU3_FileConnectionConfig file_connection_config;
    struct XIMU3_MuxConnectionConfig *mux_connection_config;
} XIMU3_Device;
typedef struct XIMU3_Devices
{
    struct XIMU3_Device *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_Devices;
typedef struct XIMU3_FileConverterProgress
{
    enum XIMU3_FileConverterStatus status;
    float percentage;
    uint64_t bytes_processed;
    uint64_t bytes_total;
} XIMU3_FileConverterProgress;
typedef void (*XIMU3_CallbackFileConverterProgress)(struct XIMU3_FileConverterProgress data, void *context);
typedef void (*XIMU3_CallbackDevices)(struct XIMU3_Devices data, void *context);
typedef struct XIMU3_NetworkAnnouncementMessage
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t tcp_port;
    uint16_t udp_send;
    uint16_t udp_receive;
    int32_t rssi;
    int32_t battery;
    enum XIMU3_ChargingStatus charging_status;
} XIMU3_NetworkAnnouncementMessage;
typedef struct XIMU3_NetworkAnnouncementMessages
{
    struct XIMU3_NetworkAnnouncementMessage *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_NetworkAnnouncementMessages;
typedef void (*XIMU3_CallbackNetworkAnnouncementMessageC)(struct XIMU3_NetworkAnnouncementMessage data, void *context);
uint64_t XIMU3_connection_add_error_callback(struct XIMU3_Connection *connection, XIMU3_CallbackErrorMessage callback, void *context);
void XIMU3_connection_remove_callback(struct XIMU3_Connection *connection, uint64_t id);
const char *XIMU3_connection_type_to_string(enum XIMU3_ConnectionType connection_type);
struct XIMU3_DataLogger *XIMU3_data_logger_new(const char *destination, const char *name, struct XIMU3_Connection *const *connections, uint32_t length);
void XIMU3_data_logger_free(struct XIMU3_DataLogger *data_logger);
enum XIMU3_Result XIMU3_data_logger_get_result(struct XIMU3_DataLogger *data_logger);
enum XIMU3_Result XIMU3_data_logger_log(const char *destination, const char *name, struct XIMU3_Connection *const *connections, uint32_t length, uint32_t seconds);
const char *XIMU3_inertial_message_to_string(struct XIMU3_InertialMessage message);
const char *XIMU3_magnetometer_message_to_string(struct XIMU3_MagnetometerMessage message);
const char *XIMU3_high_g_accelerometer_message_to_string(struct XIMU3_HighGAccelerometerMessage message);
const char *XIMU3_quaternion_message_to_string(struct XIMU3_QuaternionMessage message);
const char *XIMU3_rotation_matrix_message_to_string(struct XIMU3_RotationMatrixMessage message);
const char *XIMU3_euler_angles_message_to_string(struct XIMU3_EulerAnglesMessage message);
const char *XIMU3_linear_acceleration_message_to_string(struct XIMU3_LinearAccelerationMessage message);
const char *XIMU3_earth_acceleration_message_to_string(struct XIMU3_EarthAccelerationMessage message);
const char *XIMU3_ahrs_status_message_to_string(struct XIMU3_AhrsStatusMessage message);
const char *XIMU3_serial_accessory_message_to_string(struct XIMU3_SerialAccessoryMessage message);
const char *XIMU3_temperature_message_to_string(struct XIMU3_TemperatureMessage message);
const char *XIMU3_battery_message_to_string(struct XIMU3_BatteryMessage message);
const char *XIMU3_rssi_message_to_string(struct XIMU3_RssiMessage message);
const char *XIMU3_notification_message_to_string(struct XIMU3_NotificationMessage message);
const char *XIMU3_error_message_to_string(struct XIMU3_ErrorMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_quaternion_message_to_euler_angles_message(struct XIMU3_QuaternionMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_rotation_matrix_message_to_euler_angles_message(struct XIMU3_RotationMatrixMessage message);
struct XIMU3_QuaternionMessage XIMU3_euler_angles_message_to_quaternion_message(struct XIMU3_EulerAnglesMessage message);
const char *XIMU3_device_to_string(struct XIMU3_Device device);
void XIMU3_devices_free(struct XIMU3_Devices devices);
const char *XIMU3_file_converter_status_to_string(enum XIMU3_FileConverterStatus status);
const char *XIMU3_file_converter_progress_to_string(struct XIMU3_FileConverterProgress progress);
struct XIMU3_FileConverter *XIMU3_file_converter_new(const char *destination, const char *name, const char *const *file_paths, uint32_t length, XIMU3_CallbackFileConverterProgress callback, void *context);
void XIMU3_file_converter_free(struct XIMU3_FileConverter *file_converter);
enum XIMU3_Result XIMU3_file_converter_convert(const char *destination, const char *name, const char *const *file_paths, uint32_t length);
const char *XIMU3_network_announcement_message_to_string(struct XIMU3_NetworkAnnouncementMessage message);
void XIMU3_network_announcement_messages_free(struct XIMU3_NetworkAnnouncementMessages messages);
struct XIMU3_NetworkAnnouncement *XIMU3_network_announcement_new(void);
void XIMU3_network_announcement_free(struct XIMU3_NetworkAnnouncement *network_announcement);
enum XIMU3_Result XIMU3_network_announcement_get_result(struct XIMU3_NetworkAnnouncement *network_announcement);
uint64_t XIMU3_network_announcement_add_callback(struct XIMU3_NetworkAnnouncement *network_announcement, XIMU3_CallbackNetworkAnnouncementMessageC callback, void *context);
void XIMU3_network_announcement_remove_callback(struct XIMU3_NetworkAnnouncement *network_announcement, uint64_t id);
struct XIMU3_NetworkAnnouncementMessages XIMU3_network_announcement_get_messages(struct XIMU3_NetworkAnnouncement *network_announcement);
struct XIMU3_NetworkAnnouncementMessages XIMU3_network_announcement_get_messages_after_short_delay(struct XIMU3_NetworkAnnouncement *network_announcement);
const char *XIMU3_ping_response_to_string(struct XIMU3_PingResponse response);
struct XIMU3_PortScanner *XIMU3_port_scanner_new(void);
void XIMU3_port_scanner_free(struct XIMU3_PortScanner *port_scanner);
struct XIMU3_Devices XIMU3_port_scanner_get_devices(struct XIMU3_PortScanner *port_scanner);
struct XIMU3_Devices XIMU3_port_scanner_scan(void);
struct XIMU3_Devices XIMU3_port_scanner_scan_filter(enum XIMU3_PortType port_type);
struct XIMU3_CharArrays XIMU3_port_scanner_get_port_names(void);
const char *XIMU3_result_to_string(enum XIMU3_Result result);
const char *XIMU3_statistics_to_string(struct XIMU3_Statistics statistics);